# fft-bruun

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.project  cabal.project.freeze  cabal.project.local  fft-bruun.cabal  stack.yaml
csrc/: fft.cpp
doc/: Bruun's FFT.md
src/bench/: Main.hs
src/lib-internal/Isumi/Math/FFT/: Utils.hs
src/lib-internal/Isumi/Math/FFT/Bruun/: Internal.hs
src/lib/Isumi/Debug/: Trace.hs
src/lib/Isumi/Math/: AppxEq.hs  Complex.hs  MatrixUtil.hs
src/lib/Isumi/Math/FFT/: Bruun.hs  Image.hs  MatLab.hs
src/lib/Isumi/Math/FFT/Internal/: Bruun.hs  Bruun2D.hs  Polynomial.hs  Utils.hs
src/lib/c/: polynomial.c
src/lib/include/: polynomial.h
src/test/Isumi/: Hspec.hs
src/test/Isumi/Math/FFT/: BruunSpec.hs  MatLabSpec.hs  PolynomialSpec.hs  SpecUtil.hs
