cabal-version:       2.2
name:                fft-bruun
version:             0.1.0.0
synopsis:            FFT implemented with Bruun's algorithm
homepage:            https://github.com/isumi/fft-bruun#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              isumi
maintainer:          contact@zelinf.net
copyright:           (c) 2018 Isumi Feng
category:            Math
build-type:          Simple
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/isumi/fft-bruun

common deps
  build-depends:
      base >= 4.10 && < 5
  ghc-options: -Wall

library
  import: deps
  hs-source-dirs: src/lib
  exposed-modules:
      Isumi.Math.FFT.Bruun
    , Isumi.Math.FFT.Internal.Bruun
    , Isumi.Math.FFT.Internal.Utils
    , Isumi.Math.FFT.Internal.Polynomial
  include-dirs: src/lib/include
  c-sources:
      src/lib/c/polynomial.c
  includes:
      src/lib/include/polynomial.h
  build-depends:
      vector
    , mono-traversable
    , monad-loops
  default-language: Haskell2010

