cabal-version:       2.2
name:                fft-bruun
version:             0.1.0.0
synopsis:            FFT implemented with Bruun's algorithm
homepage:            https://github.com/isumi/fft-bruun#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              isumi
maintainer:          contact@zelinf.net
copyright:           (c) 2018 Isumi Feng
category:            Math
build-type:          Simple
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/isumi/fft-bruun

common deps
  build-depends:
      base >= 4.10 && < 5
    , vector
  ghc-options: -Wall

library
  import: deps
  hs-source-dirs: src/lib
  exposed-modules:
      Isumi.Math.FFT.Bruun
    , Isumi.Math.FFT.Internal.Bruun
    , Isumi.Math.FFT.Internal.Utils
    , Isumi.Math.FFT.Internal.Polynomial
    , Isumi.Math.AppxEq
    , Isumi.Debug.Trace
  include-dirs: src/lib/include
  c-sources:
      src/lib/c/polynomial.c
  includes:
      src/lib/include/polynomial.h
  build-depends:
      vector
    , mono-traversable
    , monad-loops
  default-language: Haskell2010

test-suite fft-bruun-test
  import: deps
  type: exitcode-stdio-1.0
  hs-source-dirs: src/test
  main-is: Spec.hs
  other-modules:
      Isumi.Math.FFT.PolynomialSpec
    , Isumi.Hspec
  build-depends:
      fft-bruun
    , hspec
    , QuickCheck
  default-language: Haskell2010

