cabal-version:       2.2
name:                fft-bruun
version:             0.1.0.0
synopsis:            FFT implemented with Bruun's algorithm
homepage:            https://github.com/isumi/fft-bruun#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              isumi
maintainer:          contact@zelinf.net
copyright:           (c) 2018 Isumi Feng
category:            Math
build-type:          Simple
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/isumi/fft-bruun

common deps
  build-depends:
      base >= 4.10 && < 5
    , vector >= 0.12.0 && < 0.13
  ghc-options: -Wall

library
  import: deps
  hs-source-dirs: src/lib
  exposed-modules:
      Isumi.Math.FFT.Bruun
    , Isumi.Math.FFT.Internal.Bruun
    , Isumi.Math.FFT.Internal.Bruun2D
    , Isumi.Math.FFT.Internal.Utils
    , Isumi.Math.FFT.Internal.Polynomial
    , Isumi.Math.AppxEq
    , Isumi.Math.Complex
    , Isumi.Math.MatrixUtil
    , Isumi.Debug.Trace
    , Isumi.Math.FFT.Image
  build-depends:
      monad-loops >= 0.4.3 && < 0.5
    , integer-logarithms >= 1.0.2 && < 1.1
    , unordered-containers >= 0.2.9 && < 0.3
    , hmatrix >= 0.19.0 && < 0.20
    , JuicyPixels >= 3.3.2 && < 3.4
  ghc-options: -Wall
  default-language: Haskell2010

test-suite fft-bruun-test
  import: deps
  type: exitcode-stdio-1.0
  hs-source-dirs: src/test
  main-is: Spec.hs
  other-modules:
      Isumi.Math.FFT.PolynomialSpec
    , Isumi.Math.FFT.BruunSpec
    , Isumi.Math.FFT.SpecUtil
    , Isumi.Hspec
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      fft-bruun
    , hspec >= 2.6.0 && < 2.7
    , QuickCheck >= 2.12.6 && < 2.13
  default-language: Haskell2010

benchmark fft-bruun-bench
  import: deps
  type: exitcode-stdio-1.0
  hs-source-dirs: src/bench
  main-is: Main.hs
  ghc-options:
      -threaded
      -with-rtsopts=-N2
  build-depends:
      fft-bruun
    , criterion >= 1.5.3 && < 1.6
    , deepseq >= 1.4.4 && < 1.5
    , MonadRandom >= 0.5.1 && < 0.6
  default-language: Haskell2010

